Closed Bug 952270 Opened 11 years ago Closed 11 years ago

Crash [@ nsSVGTextFrame2::GetTextPath]

Categories

(Core :: SVG, defect)

x86_64
macOS
defect
Not set
critical

Tracking

()

VERIFIED FIXED
mozilla29
Tracking Status
firefox28 --- fixed
firefox29 --- verified

People

(Reporter: jruderman, Assigned: heycam)

References

Details

(Keywords: crash, regression, testcase)

Crash Data

Attachments

(2 files)

The testcase is based on layout/reftests/svg/textPath-02.svg and removing the "d" attribute from the <path> element. The first bad revision is: changeset: http://hg.mozilla.org/mozilla-central/rev/4f086025350f user: Jonathan Watt date: Mon Nov 18 01:29:06 2013 +0000 summary: Bug 930577 - Convert much of the SVG code for calculating path lengths and position at an offset along a path to Moz2D. r=heycam
We should just be null checking |path| in there.
Attached patch patchSplinter Review
Assignee: nobody → cam
Status: NEW → ASSIGNED
Attachment #8350340 - Flags: review?(longsonr)
Attachment #8350340 - Flags: review?(longsonr) → review+
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla29
Comment on attachment 8350340 [details] [diff] [review] patch [Approval Request Comment] Bug caused by (feature/regressing bug #): bug 930577 User impact if declined: some SVG pages will cause a browser crash Testing completed (on m-c, etc.): landed on m-c with patch Risk to taking this patch (and alternatives if risky): pretty small it's just a nullptr check String or IDL/UUID changes made by this patch: none
Attachment #8350340 - Flags: approval-mozilla-aurora?
read "landed on m-c with patch" as "landed on m-c with test" of course :-)
Attachment #8350340 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Flags: in-testsuite?
crashtest was part of patch.
Flags: in-testsuite? → in-testsuite+
Reproduced in nightly 2013-12-19. Verified fixed 29.0a1 (2014-01-09), win 7 x64
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: